# src/routes/users/users.ts
@@ -16,6 +16,7 @@ routerV1.get("/users", userController.find)
 routerV1.get("/users/:id", userController.findById)
 routerV1.get("/users/email/:email", userController.findByEmail)
 routerV1.get("/users/fullName/:fullName", userController.findByFullname)
+routerV1.get("/users/:userId/thread", threadController.findThreadByUserId);
 routerV1.post("/users",userController.create)
 routerV1.patch("/users/:id",authentication, upload.single("image") , userController.update);
 routerV1.delete("/users/:id", userController.delete)
@@ -37,8 +38,7 @@ routerV1.post("/thread", authentication, upload.single("image") ,threadControlle
 routerV1.patch("/thread/:id",authentication, threadController.update)
 routerV1.delete("/thread/:id",authentication, threadController.delete)
 
-routerV1.get("/follow", followController.findFollow)
-routerV1.post("/follow", followController.postFollow)
+routerV1.get("/follow", followController.getFollowers)
 
 routerV1.get("/suggestion/:userId", suggestionController.getSuggestions)
 
