# swagger/swagger-output.json
@@ -211,6 +211,32 @@
         }
       }
     },
+    "/api/v1/users/{userId}/thread": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/v1/auth/login": {
       "post": {
         "description": "",
@@ -641,15 +667,11 @@
           },
           "threadId": {
             "type": "integer"
-          },
-          "userId": {
-            "type": "integer"
           }
         },
         "required": [
           "content",
-          "threadId",
-          "userId"
+          "threadId"
         ]
       },
       "CreateThreadDTO": {
